k8s-manifests/portfolio-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-website
  namespace: portfolio
  labels:
    app: portfolio-website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-website
  template:
    metadata:
      labels:
        app: portfolio-website
    spec:
      containers:
        - name: portfolio-website
          image: talaatharb/portfolio-website:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
