k8s-manifests/portfolio-service.yml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-website
  namespace: portfolio
  labels:
    app: portfolio-website
spec:
  selector:
    app: portfolio-website
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
